employeedb is created in a container and visualized in phpmyadmin along with authdb